--- a/src/css/Student/PersonalAccount/main.css
+++ b/src/css/Student/PersonalAccount/main.css
@@ -51,6 +51,10 @@
     padding: 5% 5% 5% 10%;
 }
 
+.technical-chat .card-body {
+    overflow-y: auto;
+}
+
 @media (max-width: 767px) {
     .personal-account-body {
         flex-direction: column;
