--- a/src/css/Teacher/PersonalAccount/Statistics/content.css
+++ b/src/css/Teacher/PersonalAccount/Statistics/content.css
@@ -121,6 +121,18 @@
     font-size: 0.8rem;
 }
 
+.payment-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.payment-header p {
+    color: #2CAAA4;
+    font-size: 0.8rem;
+}
+
 @media (max-width: 1399px) {
 
     .profit-table,
