--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -122,6 +122,30 @@
     margin-bottom: 10%;
 }
 
+.list-group {
+    box-shadow: 0px 0px 40px 1px #F0F0F0;
+    height: 100%;
+    padding: 1% 0.5% 1% 0.5%;
+    border-radius: 10px;
+}
+
+.list-group-item a {
+    color: #696E76;
+    text-decoration: none;
+    font-size: 16px;
+    width: 210px;
+}
+
+.list-group-item a:active {
+    color: #000000;
+    font-weight: 500;
+}
+
+.list-group-item a:hover {
+    color: #000000;
+    font-weight: 500;
+}
+
 @media (max-width: 991px) and (min-width: 768px) {
     .chat-item h4 {
         font-size: 1.2rem;
@@ -155,6 +179,10 @@
         align-items: center;
     }
 
+    .navbar-computer {
+        display: none;
+    }
+
     .chat-list {
         width: 100%;
         margin-bottom: 10%;
@@ -169,5 +197,11 @@
     .private-chat-body .card-body {
         background: #EBEBEB;
         border: none;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar-mobile {
+        display: none;
     }
 }
