--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -47,6 +47,11 @@
     box-shadow: 0px 0px 20px 1px rgba(240, 240, 240, 0.3);
 }
 
+.active {
+    background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #D9D9D9 0%, #38C4BD 100%);
+    box-shadow: 0px 0px 20px 1px rgba(240, 240, 240, 0.3);
+}
+
 .chat-item img {
     width: 100px;
     height: 100px;
@@ -87,6 +92,10 @@
     display: flex;
     flex-direction: row;
     gap: 5%;
+}
+
+.chat-second, .chat-third {
+    display: none;
 }
 
 .sender {
