--- a/src/css/Student/PersonalAccount/TechService/main.css
+++ b/src/css/Student/PersonalAccount/TechService/main.css
@@ -9,7 +9,7 @@
 }
 
 .personal-account-body .card {
-    box-shadow: 0px 0px 40px #F0F0F0;
+    box-shadow: 0 0 40px #F0F0F0;
     border-radius: 10px;
     height: 700px;
 }
