--- a/src/css/Student/PersonalAccount/main.css
+++ b/src/css/Student/PersonalAccount/main.css
@@ -21,7 +21,7 @@
 }
 
 .list-group {
-    box-shadow: 0px 0px 40px 1px #F0F0F0;
+    box-shadow: 0 0 40px 1px #F0F0F0;
     height: 100%;
     padding: 1% 0.5% 1% 0.5%;
     border-radius: 10px;
@@ -46,7 +46,7 @@
 
 .content-personal-account {
     background: #FFFFFF;
-    box-shadow: 0px 0px 40px #F0F0F0;
+    box-shadow: 0 0 40px #F0F0F0;
     border-radius: 10px;
     padding: 5% 5% 5% 10%;
 }
