--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -38,18 +38,18 @@
     gap: 10%;
     padding: 5%;
     background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), #F4F4F4;
-    box-shadow: 0px 0px 20px 1px rgba(240, 240, 240, 0.3);
+    box-shadow: 0 0 20px 1px rgba(240, 240, 240, 0.3);
     border-radius: 10px;
 }
 
 .chat-item:hover {
     background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #D9D9D9 0%, #38C4BD 100%);
-    box-shadow: 0px 0px 20px 1px rgba(240, 240, 240, 0.3);
+    box-shadow: 0 0 20px 1px rgba(240, 240, 240, 0.3);
 }
 
 .active {
     background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #D9D9D9 0%, #38C4BD 100%);
-    box-shadow: 0px 0px 20px 1px rgba(240, 240, 240, 0.3);
+    box-shadow: 0 0 20px 1px rgba(240, 240, 240, 0.3);
 }
 
 .chat-item img {
@@ -59,7 +59,7 @@
 
 .private-chat-body .card {
     background: #F4F4F4;
-    box-shadow: 0px 4px 40px 1px #F0F0F0;
+    box-shadow: 0 4px 40px 1px #F0F0F0;
     height: 700px;
     border: none;
 }
@@ -132,7 +132,7 @@
 }
 
 .list-group {
-    box-shadow: 0px 0px 40px 1px #F0F0F0;
+    box-shadow: 0 0 40px 1px #F0F0F0;
     height: 100%;
     padding: 1% 0.5% 1% 0.5%;
     border-radius: 10px;
