--- a/src/css/Teacher/PersonalAccount/Statistics/content.css
+++ b/src/css/Teacher/PersonalAccount/Statistics/content.css
@@ -14,7 +14,7 @@
 }
 
 .chart, .profit-statistic, .payment-statistic {
-    box-shadow: 0px 0px 40px 1px #F0F0F0;
+    box-shadow: 0 0 40px 1px #F0F0F0;
     border-radius: 10px;
 }
 
