--- a/src/css/mainPage/courses.css
+++ b/src/css/mainPage/courses.css
@@ -1,4 +1,4 @@
-.courses {
+0.courses {
     background: #F4F4F4;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -17,7 +17,7 @@
     width: 460px;
     height: 300px;
     color: white;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
