--- a/src/css/mainPage/news.css
+++ b/src/css/mainPage/news.css
@@ -2,7 +2,7 @@
 
 .card {
     background: linear-gradient(180deg, #D9D9D9 45.62%, #38C4BD 100%);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
 }
 
 #carouselNews {
