--- a/src/css/mainPage/courses.css
+++ b/src/css/mainPage/courses.css
@@ -1,4 +1,4 @@
-0.courses {
+.courses {
     background: #F4F4F4;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -45,7 +45,7 @@
     margin-bottom: 5%;
 }
 
-.block-buton-courses {
+.block-button-courses {
     display: flex;
     justify-content: center;
     margin-top: 5%;
