--- a/src/css/courses/users.css
+++ b/src/css/courses/users.css
@@ -38,7 +38,7 @@
     height: 150px;
 }
 
-.textuser-course {
+.text-user-course {
     width: 50%
 }
 
@@ -57,7 +57,7 @@
         gap: 3%;
     }
 
-    .textuser-course {
+    .text-user-course {
         width: 100%
     }
 
