--- a/src/css/Student/PersonalAccount/Payment/content.css
+++ b/src/css/Student/PersonalAccount/Payment/content.css
@@ -15,7 +15,7 @@
 }
 
 .payment h2 {
-    font-family: Montserrat-SemiBold;
+    font-family: Montserrat-SemiBold, sans-serif;
 }
 
 .content-personal-account {
