--- a/src/css/Teacher/Courses/TeacherCoursePage/students.css
+++ b/src/css/Teacher/Courses/TeacherCoursePage/students.css
@@ -23,7 +23,7 @@
 }
 
 .logo-student h2 {
-    font-family: Montserrat-SemiBold;
+    font-family: Montserrat-SemiBold, sans-serif;
 }
 
 .logo-student-text {
