--- a/src/css/Teacher/PersonalAccount/Courses/content.css
+++ b/src/css/Teacher/PersonalAccount/Courses/content.css
@@ -1,5 +1,5 @@
 .description-course h1 {
-    font-family: Montserrat-SemiBold;
+    font-family: Montserrat-SemiBold, sans-serif;
     font-size: 1.5rem;
 }
 
