--- a/src/css/mainPage/courses.css
+++ b/src/css/mainPage/courses.css
@@ -8,7 +8,7 @@
 
 .courses h1 {
     margin-bottom: 5%;
-    font-family: Montserrat-Bold;
+    font-family: Montserrat-Bold, sans-serif;
 }
 
 .course {
