--- a/src/css/mainPage/main.css
+++ b/src/css/mainPage/main.css
@@ -9,7 +9,7 @@
 }
 
 * {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
 }
 
 .first-block {
@@ -19,11 +19,11 @@
 }
 
 .mobile-header h1 {
-    font-family: Montserrat-Bold;
+    font-family: Montserrat-Bold, sans-serif;
 }
 
 .text-in-pic h1 {
-    font-family: Montserrat-Bold;
+    font-family: Montserrat-Bold, sans-serif;
     font-size: 48px;
     margin-bottom: 5%;
 }
@@ -94,7 +94,7 @@
 
 .text-about h1{
     margin-bottom: 5%;
-    font-family: Montserrat-Bold;
+    font-family: Montserrat-Bold, sans-serif;
 }
 
 #enter {
