--- a/src/css/Student/Courses/UserLesson/homework.css
+++ b/src/css/Student/Courses/UserLesson/homework.css
@@ -28,12 +28,12 @@
     margin-bottom: 5%;
 }
 
-#comment, #link {
+#link {
     height: 65px;
 }
 
-.linkInput {
-    margin-bottom: 20%;
+#comment {
+    height: 200px;
 }
 
 .head-files {
