--- a/src/css/courses/main.css
+++ b/src/css/courses/main.css
@@ -8,6 +8,11 @@
     src: url('../../../fonts/fonts/Montserrat-Bold.ttf');
 }
 
+@font-face {
+    font-family: "Montserrat-SemiBold";
+    src: url('../../../fonts/fonts/Montserrat-SemiBold.ttf');
+}
+
 * {
     font-family: Montserrat, sans-serif;
 }
