--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -128,7 +128,7 @@
 }
 
 .private-chat-body .card {
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 .list-group {
@@ -174,9 +174,15 @@
     }
 }
 
+@media (max-width: 1199px) {
+    .private-messages-header {
+        font-size: 1.6rem;
+    }
+}
+
 @media (min-width: 992px) {
     .private-chat-body .card {
-        width: 50%;
+        width: 70%;
     }
 
 }
@@ -212,5 +218,9 @@
 @media (min-width: 768px) {
     .navbar-mobile {
         display: none;
+    }
+
+    .private-chat-body .card {
+        margin-top: -10%;
     }
 }
