--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -13,7 +13,7 @@
 }
 
 .more-courses {
-    background: #F4F4F4;
+    background-color: #F4F4F4;
     border: 1px solid #434343;
     color: #262626;
     font-size: 18px;
@@ -21,20 +21,22 @@
     width: 240px;
     height: 60px;
     font-weight: bold;
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .more-courses:hover {
-    background: #000000;
+    background-color: #000000;
     color: white;
 }
 
 .button-rate {
-    background: #000000;
+    background-color: #000000;
     color: white;
     width: 200px;
     height: 60px;
     border-radius: 10px;
     border: 0px;
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .button-rate:hover {
@@ -48,6 +50,7 @@
     border: 1px solid black;
     border-radius: 30px;
     width: 48px;
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .social-button:hover {
