--- a/src/css/courses/rates.css
+++ b/src/css/courses/rates.css
@@ -1,7 +1,8 @@
 .rates {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 3%;
+    justify-content: center;
     margin-top: 5%;
     margin-bottom: 5%;
 }
