--- a/src/css/Student/Courses/UserLesson/homework.css
+++ b/src/css/Student/Courses/UserLesson/homework.css
@@ -36,16 +36,45 @@
     height: 200px;
 }
 
-.head-files {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+.drag-container {
+    background-color: #D9D9D9;
+    border: 2px dashed grey;
+    width: 100%;
+    height: 70%;
+    border-radius: 20px;
+    margin-top: 10%;
+    margin-left: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+    padding-left: 3%;
+    padding-right: 2%;
 }
 
-.text-files {
-    font-size: 1.3rem;
-    margin-top: 35%;
-    margin-left: 5%;
+.result img {
+    width: 20px;
 }
+
+.result {
+    margin-bottom: 0
+}
+
+.drag-text {
+    font-size: 0.9rem;
+}
+
+.choose-file {
+    font-family: Montserrat-SemiBold, sans-serif;
+    cursor: pointer;
+}
+
+input[type="file"] {
+    display: none;
+}
+
 
 .homework-form form:hover button{
     background: radial-gradient(100% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), #000000;
@@ -61,6 +90,12 @@
 @media (max-width: 991px) {
     .homework-form {
         flex-direction: column;
+    }
+
+    .drag-container {
+        height: 200px;
+        margin-left: 0;
+        margin-bottom: 5%;
     }
 
     .head-files {
