--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     gap: 20px;
     overflow-y: auto;
-    padding-right: 3%;
+    /* padding-right: 3%; */
     width: 40%;
 }
 
@@ -234,7 +234,6 @@
     .chat-list {
         width: 100%;
         margin-bottom: 10%;
-        margin-right: 0;
     }
 
     .private-chat-body .card {
@@ -261,5 +260,20 @@
 
     .private-chat-body .card {
         margin-top: -10%;
+    }
+}
+
+@media (max-width: 400px) {
+    .chat-item h4 {
+        font-size: 1rem;
+    }
+
+    .chat-item p {
+        font-size: 0.7rem;
+    }
+
+    .chat-item img {
+        width: 60px;
+        height: 60px;
     }
 }
