--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -28,7 +28,6 @@
     flex-direction: column;
     gap: 20px;
     overflow-y: auto;
-    /* padding-right: 3%; */
     width: 40%;
 }
 
@@ -249,6 +248,10 @@
 }
 
 @media (min-width: 768px) {
+
+    .chat-list {
+        padding-right: 3%;
+    }
 
     .return-mobile {
         display: none;
