--- a/src/css/courses/rates.css
+++ b/src/css/courses/rates.css
@@ -39,3 +39,13 @@
         gap: 20px;
     }
 }
+
+@media (max-width: 320px) {
+    .rate {
+        width: 100%;
+    }
+
+    .text-rate {
+        height: 50%;
+    }
+}
