--- a/src/css/mainPage/main.css
+++ b/src/css/mainPage/main.css
@@ -206,3 +206,23 @@
         gap: 30px;
     }
 }
+
+@media (max-width: 350px) {
+    .img-circle {
+        height: 74px;
+        width: 90px;
+    }
+    .text-pros {
+        width: 100%;
+    }
+
+    .main-page-header-button {
+        width: 100% !important;
+    }
+
+    .img-circle img {
+        width: 90%;
+    }
+
+
+}
