--- a/src/css/news/main.css
+++ b/src/css/news/main.css
@@ -36,6 +36,10 @@
     justify-content: space-between;
 }
 
+.news-body {
+    margin-bottom: 5%;
+}
+
 .news-nav {
     height: 100%;
     width: 35%;
