--- a/src/css/Student/Courses/UserLesson/homework.css
+++ b/src/css/Student/Courses/UserLesson/homework.css
@@ -23,7 +23,7 @@
     padding-left: 3%;
 }
 
-.headForm, .files h2{
+.head-form, .files h2 {
     font-size: 2rem;
     font-family: Montserrat-Bold, sans-serif;
     margin-bottom: 5%;
@@ -42,9 +42,9 @@
     background-color: #D9D9D9;
     border: 2px dashed grey;
     width: 100%;
-    height: 70%;
+    height: 67%;
     border-radius: 20px;
-    margin-top: 10%;
+    margin-top: 8%;
     margin-left: 3%;
     display: flex;
     align-items: center;
@@ -132,5 +132,36 @@ input[type="file"] {
 @media (max-width: 500px) {
     .files .button-signin {
         width: 100%;
+    }
+}
+
+@media (min-width: 768px) {
+    .add-files-mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+    .drag-container {
+        display: none;
+    }
+
+    .description-text, .description-text-homework {
+        font-size: 1rem;
+    }
+
+    .description-title, .description-title-homework {
+        font-size: 1.5rem;
+    }
+
+    .head-form, .head-files h2 {
+        font-size: 1.6rem !important;
+    }
+
+    .add-files-mobile {
+        display: flex;
+        justify-content: center;
+        padding-top: 10%;
+        padding-bottom: 10%;
     }
 }
