--- a/src/css/Student/PrivateMessages/main.css
+++ b/src/css/Student/PrivateMessages/main.css
@@ -29,6 +29,7 @@
     gap: 20px;
     overflow-y: auto;
     width: 40%;
+    height: calc(100vh - 500px);
 }
 
 .chat-list::-webkit-scrollbar {
@@ -115,9 +116,6 @@
     gap: 5%;
 }
 
-.chat-second, .chat-third {
-    display: none;
-}
 
 .sender {
     display: flex;
@@ -251,10 +249,6 @@
 
     .chat-list {
         padding-right: 3%;
-    }
-
-    .return-mobile {
-        display: none;
     }
 
     .navbar-mobile {
